--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.12.1",
+    "@mui/x-date-pickers": "^7.19.0",
+    "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.3.1",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-pincode": "^1.1.3",
+    "react-postal-code": "^1.2.0",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.12"
   },
