--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.3.1",
     "dayjs": "^1.11.13",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
