--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "@mui/x-date-pickers": "^7.19.0",
     "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.3.1",
-    "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
@@ -29,6 +29,7 @@
     "react-pincode": "^1.1.3",
     "react-postal-code": "^1.2.0",
     "react-router-dom": "^6.26.0",
+    "recharts": "^2.13.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
