--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
-    "@mui/styled-engine": "^5.16.6",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-charts": "^7.12.1",
-    "@mui/x-date-pickers": "^7.19.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.1",
     "axios": "^1.3.1",
+    "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
@@ -30,9 +27,12 @@
     "react-postal-code": "^1.2.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.13.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^22.8.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -41,8 +41,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.7",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.3.4"
   }
 }
