--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
-    "axios": "^1.3.1",
+    "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
     "ldrs": "^1.0.2",
@@ -26,7 +27,7 @@
     "react-pincode": "^1.1.3",
     "react-postal-code": "^1.2.0",
     "react-router-dom": "^6.26.0",
-    "recharts": "^2.13.1",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
