--- a/client/package.json
+++ b/client/package.json
@@ -10,25 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^5.16.7",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
-    "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
     "ldrs": "^1.0.2",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
-    "react-pincode": "^1.1.3",
-    "react-postal-code": "^1.2.0",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.13.3",
-    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -37,12 +35,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.3.4"
   }
