--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
-    "react-transition-group": "^4.4.5",
-    "yahoo-finance": "^0.3.8"
+    "nodemon": "^3.1.4"
   }
 }
