--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -20,6 +21,7 @@
     "jspdf": "^2.5.2",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.460.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
