--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.460.0",
     "postcss": "^8.4.49",
@@ -41,7 +42,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.16",
     "vite": "^5.3.4"
   }
 }
