--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,10 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "https://your-backend-url.com/api/:path*" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "outputDirectory": "dist",
-  "framework": "vite"
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "https://your-backend-url.com/api/:path*"
+        },
+        { "source": "/(.*)", "destination": "/index.html" }
+    ],
+    "buildCommand": "npm run build",
+    "installCommand": "npm install",
+    "outputDirectory": "dist",
+    "framework": "vite"
 }
