--- a/client/vercel.json
+++ b/client/vercel.json
@@ -6,6 +6,29 @@
         },
         { "source": "/(.*)", "destination": "/index.html" }
     ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "s-maxage=1, stale-while-revalidate"
+                },
+                { "key": "X-Content-Type-Options", "value": "nosniff" },
+                { "key": "X-Frame-Options", "value": "DENY" },
+                { "key": "X-XSS-Protection", "value": "1; mode=block" }
+            ]
+        },
+        {
+            "source": "/assets/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        }
+    ],
     "buildCommand": "npm run build",
     "installCommand": "npm install",
     "outputDirectory": "dist",
