--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.460.0",
     "postcss": "^8.4.49",
@@ -31,7 +31,8 @@
     "react-router-dom": "^6.26.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^41.6.2"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
@@ -43,6 +44,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "tailwindcss": "^3.4.16",
-    "vite": "^5.3.4"
+    "vite": "^6.3.2"
   }
 }
