--- a/client/vercel.json
+++ b/client/vercel.json
@@ -32,5 +32,7 @@
     "buildCommand": "npm run build",
     "installCommand": "npm install",
     "outputDirectory": "dist",
-    "framework": "vite"
+    "framework": "vite",
+    "trailingSlash": false,
+    "cleanUrls": true
 }
