--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,9 +2,12 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://your-backend-url.com/api/:path*"
+            "destination": "https://financeflow-server-brown.vercel.app/api/:path*"
         },
-        { "source": "/(.*)", "destination": "/index.html" }
+        { 
+            "source": "/(.*)", 
+            "destination": "/index.html" 
+        }
     ],
     "headers": [
         {
