--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,9 +4,16 @@
             "source": "/api/:path*",
             "destination": "https://financeflow-server-brown.vercel.app/api/:path*"
         },
-        { 
-            "source": "/(.*)", 
-            "destination": "/index.html" 
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/[^.]+",
+            "dest": "/",
+            "status": 200
         }
     ],
     "headers": [
