--- a/client/vercel.json
+++ b/client/vercel.json
@@ -5,15 +5,8 @@
             "destination": "https://financeflow-server-brown.vercel.app/api/:path*"
         },
         {
-            "source": "/(.*)",
+            "source": "/((?!\\.).*)",
             "destination": "/index.html"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/[^.]+",
-            "dest": "/",
-            "status": 200
         }
     ],
     "headers": [
